<resources>
    <string name="app_name">TPSIMobileProjecto</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="description">Description</string>
    <string name="img_url">Img_url</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="read_more">Read More</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="home">HOME</string>
    <string name="edit_watchlist">Edit Watchlist</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_news_found">No News found</string>
    <string name="symbol">Symbol</string>
    <string name="percentage_symbol">%</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
</resources>